SDKs/neutrinoapi.net/3.5.0/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { BadWordFilterRequest, BadWordFilterResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";

const sdk = new SDK(withSecurity(
  security: {
    apiKey: {
      apiKey: "YOUR_API_KEY_HERE",
    },
    userId: {
      apiKey: "YOUR_API_KEY_HERE",
    },
  }
));
    
const req: BadWordFilterRequest = {
  request: {
    catalog: "sit",
    censorCharacter: "voluptas",
    content: "culpa",
    outputCase: "camel",
  },
};

sdk.dataTools.badWordFilter(req).then((res: BadWordFilterResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Data Tools

* `badWordFilter` - Bad Word Filter
* `emailValidate` - Email Validate
* `phoneValidate` - Phone Validate
* `userAgentInfo` - User Agent Info

### E-commerce

* `binListDownload` - BIN List Download
* `binLookup` - BIN Lookup
* `convert` - Convert

### Geolocation

* `geocodeAddress` - Geocode Address
* `geocodeReverse` - Geocode Reverse
* `ipInfo` - IP Info

### Imaging

* `html5Render` - HTML5 Render
* `imageResize` - Image Resize
* `imageWatermark` - Image Watermark
* `qrCode` - QR Code

### Security and Networking

* `emailVerify` - Email Verify
* `hostReputation` - Host Reputation
* `ipBlocklist` - IP Blocklist
* `ipBlocklistDownload` - IP Blocklist Download
* `ipProbe` - IP Probe

### Telephony

* `hlrLookup` - HLR Lookup
* `phonePlayback` - Phone Playback
* `phoneVerify` - Phone Verify
* `smsMessage` - SMS Message
* `smsVerify` - SMS Verify
* `verifySecurityCode` - Verify Security Code

### WWW

* `browserBot` - Browser Bot
* `htmlClean` - HTML Clean
* `urlInfo` - URL Info

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
